@@ -172,6 +172,8 @@ exports.parse = function(url, options) {
       case 'w':
         dbOptions.w = parseInt(value, 10);
         break;
+      case 'authSource':
+        dbOptions.authSource = value;
       case 'wtimeoutMS':
         dbOptions.wtimeoutMS = parseInt(value, 10);
         break;
